--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/akodakim/neural_memory#readme",
   "devDependencies": {
+    "qunit-cli": "^0.2.0",
     "qunitjs": "^2.0.1"
   }
 }
